--- a/style.css
+++ b/style.css
@@ -1,3 +1,35 @@
-h1{
-    color: red;
+*{
+    margin: 0;
+    padding: 0;
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    background-color:#1A1244;
+    padding: 10px 200px;
+
+}
+nav ul{
+    display: flex;
+}
+nav ul li{
+    list-style-type: none;
+    margin: 10px ;
+}
+nav ul li a{
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    padding: 5px 10px;
+    border-radius: 10px;
+    transition: 0.5s;
+}
+nav ul li a:hover{
+    background-color: #271b67;
+    color: crimson;
+}
+nav div{
+    color: white;
+    font-size: 25px;
 }
