--- a/style.css
+++ b/style.css
@@ -153,3 +153,57 @@ main{
 .m3 .m31 a:hover{
     background-color: rgb(21, 84, 37);
 }
+footer{
+    background-color: #64026b;
+    color: white;
+}
+.f1{
+    width: 1000px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    justify-content: space-between;
+    grid-gap: 50px;
+    padding: 30px 0px;
+}
+.f11 h3{
+    font-size: 25px;
+    margin-bottom: 15px;
+}
+.f11 .p1{
+    margin-bottom: 30px;
+}
+.f11 .p2{
+    font-size: 18px;
+    font-weight: bold;
+}
+.f12 h3{
+    font-size: 25px;
+    margin-bottom: 20px;
+}
+.f12 a{
+    color: white;
+    text-decoration: none;
+}
+.f12 p{
+    margin-bottom: 10px;
+}
+.f13 div{
+    font-size: 25px;
+    margin-bottom: 25px;
+
+}
+.f13 div a{
+    color: white;
+    text-decoration: none;
+    margin-right: 10px;
+    background-color: #2D236A;
+    padding: 8px;
+    border-radius: 5px;
+}
+.f13 p{
+    margin-bottom: 10px;
+}
+.f13 h3{
+    margin-top: 30px;
+}
