--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@ nav{
     background-color:#1A1244;
     padding: 10px 200px;
     border-bottom: 4px solid #401E63;
-
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 nav ul{
     display: flex;
