--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ nav div{
     font-size: 25px;
 }
 header{
-    background-image: url(search.jpg);
+    background-image: url(image/search.jpg);
     padding: 100px 0px;
     background-repeat: no-repeat;
     background-size:cover;
