--- a/extrapage/about.css
+++ b/extrapage/about.css
@@ -36,52 +36,46 @@ nav div{
     color: white;
     font-size: 25px;
 }
-.blog-con{
+.section1{
     width: 1000px;
-    margin: 0 auto;
-}
-.blog{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 35px;
-}
-.blogimg{
-    height: 400px;
-}
-.blogimg img{
-    width: 100%;
-    height: 100%;
-}
-.blog-con h2{
-    color: green;
-    font-size: 30px;
+    margin: 100px auto;
     display: flex;
-    justify-content: center;
-    margin: 15px 0;
-    font-weight: bold;
+    justify-content: space-between;
+    align-items: center;
+    border: 2px solid red;
+    box-shadow: 10px 10px 10px 10px gray;
+    border-radius: 20px;
 }
-.blog-con h2 span{
-    color: red;
+.secction1 .image{
+    width: 500px;
+
 }
-.blog1{
-    box-shadow: 5px 5px 5px 5px gray;
-    border-radius: 5px;
+.section1 .image img{
+    width: 100%;
+    height: 400px;
+    border-radius: 15px;
 }
-.blogtext{
-    padding: 15px 30px;
+.text{
+    padding: 20px 30px;
 }
-.blogtext span{
-    color: red;
+.text h2{
+    font-size: 80px;
+    color: rgb(60, 34, 85);
 }
-.blogtext h3{
-    font-size: 22px;
-    margin: 10px 0px;
+.text p{
+    color: black;
+    opacity: 0.4;
+    font-size: 17px;
+    margin: 20px 0px;
 }
-.blogtext a{
+.text a{
     text-decoration: none;
-    color: rgb(223, 100, 23);
+    background-color: blue;
+    color: white;
+    padding: 10px 25px;
+    border-radius: 15px;
     display: inline-block;
-    margin-top: 20px;
+    margin-top: 15px;
 }
 footer{
     background-color: #64026b;
