--- a/extrapage/contact.css
+++ b/extrapage/contact.css
@@ -36,52 +36,52 @@ nav div{
     color: white;
     font-size: 25px;
 }
-.blog-con{
-    width: 1000px;
-    margin: 0 auto;
+form{
+    background:rgb(157, 139, 172);
+    height: fit-content;
+    width: fit-content;
+    margin: 100px auto;
+    padding: 50px 40px;
+    box-shadow: 10px 10px 10px 10px gray;
+    border-radius: 15px;
 }
-.blog{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 35px;
-}
-.blogimg{
-    height: 400px;
-}
-.blogimg img{
-    width: 100%;
-    height: 100%;
-}
-.blog-con h2{
-    color: green;
-    font-size: 30px;
+form h2{
+    color: white;
     display: flex;
     justify-content: center;
-    margin: 15px 0;
-    font-weight: bold;
+    margin-bottom: 20px;
 }
-.blog-con h2 span{
-    color: red;
+form .frm input{
+    display: block;
+    margin: auto;
+    width: 300px;
+    height: 30px;
+    padding: 1px 10px;
+    font-size: 15px;
+    border: none;
+    border-radius: 25px;
 }
-.blog1{
-    box-shadow: 5px 5px 5px 5px gray;
-    border-radius: 5px;
+form textarea{
+    display: block;
+    margin: auto;
+    width: 300px;
+    height: 50px;
+    padding: 10px 10px;
+    border-radius: 20px;
 }
-.blogtext{
-    padding: 15px 30px;
-}
-.blogtext span{
-    color: red;
-}
-.blogtext h3{
-    font-size: 22px;
-    margin: 10px 0px;
-}
-.blogtext a{
-    text-decoration: none;
-    color: rgb(223, 100, 23);
-    display: inline-block;
+form .sub{
+    display: block;
+    margin: auto;
+    font-size: 15px;
+    padding: 10px 20px;
+    width: 250px;
+    height: 30px;
     margin-top: 20px;
+    border-radius: 25px;
+    border: none;
+    cursor: pointer;
+    text-transform: uppercase;
+    background: linear-gradient( to right, blue,aqua);
 }
 footer{
     background-color: #64026b;
